feat: transaction changes balance

--- a/src/app/components/auth/auth.component.html
+++ b/src/app/components/auth/auth.component.html
@@ -1,98 +1,157 @@
 <p-card header="Sign in" class="signin">
-    <form class="form signin__form" [formGroup]="signinForm" (ngSubmit)="onSignIn()">
-        <div class="field">
-            <label for="email">Email</label>
-            <input id="email" name="email" type="email" pInputText formControlName="email"
-                placeholder="Enter your email" class="w-full p-2" />
+  <form class="form signin__form" [formGroup]="signinForm" (ngSubmit)="onSignIn()">
+    <div class="field">
+      <label for="email">Email</label>
+      <input
+        id="email"
+        name="email"
+        type="email"
+        pInputText
+        formControlName="email"
+        placeholder="Enter your email"
+        class="w-full p-2"/>
 
-            @if (signinForm.controls.email.invalid && signinForm.controls.email.dirty){
-                @if(signinForm.controls.email.errors?.['required']) {
-                <small>email is required</small>
-                }
-                @if(signinForm.controls.email.errors?.['email']) {
-                <small>email not valid</small>
-                }
-            }
+      @if (signinForm.controls.email.invalid && signinForm.controls.email.dirty){
+          <small>Email is required</small>
+      }
+    </div>
+    <div class="field">
+      <label for="password">Password</label>
+      <input
+        id="password"
+        name="password"
+        type="password"
+        pInputText
+        formControlName="password"
+        placeholder="Enter your password"
+        class="w-full p-2"/>
 
-        </div>
-        <div class="field">
-            <label for="password">Password</label>
-            <input id="password" name="password" type="password" pInputText formControlName="password"
-                placeholder="Enter your password" class="w-full p-2" />
-
-            @if (signinForm.controls.password.invalid && signinForm.controls.password.dirty){
-               <small>password is required</small>
-            }
-        </div>
-        <div class="footer flex flex-column w-full text-center">
-            <p-button class="mb-2 w-full" label="Sign in" type="submit" [disabled]="signinForm.invalid" />
-            <p-button class="mb-2 w-full" label="Sign up" type="button" severity="secondary" (click)="showSignUpModal = true" />
-        </div>
-    </form>
+      @if (signinForm.controls.password.invalid && signinForm.controls.password.dirty){
+        @if(!signinForm.controls.password.errors?.['minLength']){
+          <small>Minimum 5 characters</small>
+        }
+        @else if(!signinForm.controls.password.errors?.['hasUppercase']){
+          <small>Minimum 1 uppercase character</small>
+        }
+        @else if(!signinForm.controls.password.errors?.['hasNumber']){
+          <small>Minimum 1 numberic character</small>
+        }
+        @else if(!signinForm.controls.password.errors?.['hasSpecialChar']){
+          <small>Minimum 1 special character</small>
+        }
+      }
+    </div>
+    <div class="footer flex flex-column w-full text-center">
+      <p-button class="mb-2 w-full" label="Sign in" type="submit" [disabled]="signinForm.invalid"/>
+      <p-button class="mb-2 w-full" label="Sign up" type="button" severity="secondary"(click)="showSignUpModal = true"/>
+    </div>
+  </form>
 </p-card>
 
-
-<p-dialog header="Signup" [modal]="true" [(visible)]="showSignUpModal" position="top" >
-    <form class="form form__signup" [formGroup]="signupForm" (ngSubmit)="onSignUp()">
-        <div class="field">
-            <label for="nameAndSurname">Name and Surname</label>
-            <input id="nameAndSurname" name="nameAndSurname" type="text" pInputText formControlName="nameAndSurname" placeholder="Name and Surname" class="w-full p-2" />
-            @if (signupForm.controls.nameAndSurname.invalid && signupForm.controls.nameAndSurname.dirty){
-                @if(signupForm.controls.nameAndSurname.errors?.['pattern']) {
-                <small>letters only</small>
-                }
-            }
-        </div>
-        <div class="field">
-            <label for="signup-email">Email</label>
-            <input id="signup-email" name="signup-email" type="email" pInputText formControlName="email"  placeholder="Enter your email"
-                class="w-full p-2" />
-                @if (signupForm.controls.email.invalid && signupForm.controls.email.dirty){
-                  @if(signupForm.controls.email.errors?.['userExists']) {
-                    <small>user allready exists</small>
-                    }
-                  @if(signupForm.controls.email.errors?.['required']) {
-                  <small>email is required</small>
-                  }
-                  @if(signupForm.controls.email.errors?.['email']) {
-                  <small>invalid email</small>
-                  }
-              }
-        </div>
-        <div class="field">
-          <label for="password">Password</label>
-          <input id="password" name="password" type="password" pInputText formControlName="password"
-              placeholder="Enter your password" (focus)="op.toggle($event)" class="w-full p-2" />
-        </div>
-      <div class="field">
-        <label for="accountAmount">Account Amount</label>
-        <input id="accountAmount" name="accountAmount" type="number" pInputText formControlName="accountAmount"
-            placeholder="Enter amount" class="w-full p-2" />
-
-        @if (signupForm.controls.accountAmount.invalid && signupForm.controls.accountAmount.dirty){
-           <small>provide a valid number</small>
-        }
+<p-dialog
+  header="Signup"
+  [modal]="true"
+  [(visible)]="showSignUpModal"
+  position="top"
+>
+  <form class="form form__signup"[formGroup]="signupForm" (ngSubmit)="onSignUp()">
+    <div class="field">
+      <label for="nameAndSurname">Name and Surname</label>
+      <input
+        id="nameAndSurname"
+        name="nameAndSurname"
+        type="text"
+        pInputText
+        formControlName="nameAndSurname"
+        placeholder="Name and Surname"
+        class="w-full p-2"
+      />
+      @if (signupForm.controls.nameAndSurname.invalid &&
+      signupForm.controls.nameAndSurname.dirty){
+      @if(signupForm.controls.nameAndSurname.errors?.['pattern']) {
+      <small>letters only</small>
+      } }
     </div>
-        <div class="footer flex flex-column w-full text-center">
-            <p-button class="mb-2 w-full" label="Sign up" type="submit" [disabled]="signupForm.invalid" />
-            <p-button class="mb-2 w-full" label="Cancel" type="button" severity="secondary"
-                (click)="showSignUpModal = false" />
-        </div>
-    </form>
+    <div class="field">
+      <label for="signup-email">Email</label>
+      <input
+        id="signup-email"
+        name="signup-email"
+        type="email"
+        pInputText
+        formControlName="email"
+        placeholder="Enter your email"
+        class="w-full p-2"
+      />
+      @if (signupForm.controls.email.invalid && signupForm.controls.email.dirty){
+          @if(signupForm.controls.email.errors?.['userExists']) {
+                <small>user allready exists</small>
+          }
+          @if(signupForm.controls.email.errors?.['required']) {
+              <small>email is required</small>
+          }
+          @if(signupForm.controls.email.errors?.['email']) {
+                <small>invalid email</small>
+          }
+      }
+    </div>
+    <div class="field">
+      <label for="signupPassword">Password</label>
+      <input
+        id="signupPassword"
+        name="signupPassword"
+        type="password"
+        pInputText
+        formControlName="signupPassword"
+        placeholder="Enter your password"
+        (focus)="op.toggle($event)"
+        class="w-full p-3" />
+    </div>
+    <div class="field">
+      <label for="accountAmount">Account Amount</label>
+      <p-inputnumber
+        id="accountAmount"
+        name="accountAmount"
+        formControlName="accountAmount"
+        placeholder="Enter amount"
+        class="w-full p-2"
+      />
+
+      @if (signupForm.controls.accountAmount.invalid &&
+      signupForm.controls.accountAmount.dirty){
+      <small>provide a valid number</small>
+      }
+    </div>
+    <div class="footer flex flex-column w-full text-center">
+      <p-button
+        class="mb-2 w-full"
+        label="Sign up"
+        type="submit"
+        [disabled]="signupForm.invalid"
+      />
+      <p-button
+        class="mb-2 w-full"
+        label="Cancel"
+        type="button"
+        severity="secondary"
+        (click)="showSignUpModal = false"
+      />
+    </div>
+  </form>
 </p-dialog>
 
 <p-popover #op>
   <div class="password__validation">
-    <small [ngClass]="{'valid': !!signupForm.controls.password.errors?.['minLength'] || signupForm.controls.password.valid}">
+    <small [ngClass]="{'valid': !!signupForm.controls.signupPassword.errors?.['minLength'] || signupForm.controls.signupPassword.valid}">
       Minimum 5 characters
     </small>
-    <small [ngClass]="{'valid': !!signupForm.controls.password.errors?.['hasUppercase'] || signupForm.controls.password.valid}">
+    <small [ngClass]="{'valid': !!signupForm.controls.signupPassword.errors?.['hasUppercase'] || signupForm.controls.signupPassword.valid}">
       Minimum 1 uppercase character
     </small>
-    <small [ngClass]="{'valid': !!signupForm.controls.password.errors?.['hasNumber'] || signupForm.controls.password.valid}">
+    <small [ngClass]="{'valid': !!signupForm.controls.signupPassword.errors?.['hasNumber'] || signupForm.controls.signupPassword.valid}">
       Minimum 1 numberic character
     </small>
-    <small [ngClass]="{'valid': !!signupForm.controls.password.errors?.['hasSpecialChar'] || signupForm.controls.password.valid}">
+    <small [ngClass]="{'valid': !!signupForm.controls.signupPassword.errors?.['hasSpecialChar'] || signupForm.controls.signupPassword.valid}">
       Minimum 1 special character
     </small>
   </div>
