fix: admin panel after refactor

--- a/src/app/components/shared/add-transaction/add-transaction.component.html
+++ b/src/app/components/shared/add-transaction/add-transaction.component.html
@@ -5,7 +5,7 @@
   </div>
   <div class="field">
     <label for="category">Category</label>
-    <input id="category" type="text" name="category" pInputText formControlName="category" placeholder="category" p class="w-full p-2"/>
+    <input id="category" type="text" name="category" pInputText formControlName="category" placeholder="Category" p class="w-full p-2"/>
   </div>
   <div class="field">
     <label for="timeAndDate">Time and Date</label>
