--- a/src/app/components/admin-panel/admin-panel.component.html
+++ b/src/app/components/admin-panel/admin-panel.component.html
@@ -31,16 +31,17 @@
 </div>
 
 
-<p-dialog [header]="viewUser ? viewUser.nameAndSurname + ' transactions' : 'Transactions'"
+<p-dialog [header]="viewUser() ? viewUser().nameAndSurname + ' transactions' : 'Transactions'"
           class="transactions"
           maximize="true"
           [maximizable]="true"
           [contentStyle]="{ width: '100%', height: '100vh'}"
           [modal]="true"
+          (visibleChange)="onCloseDialog()"
           [(visible)]="showDialog"
           position="center">
-          @if(viewUser && viewUser.id){
-            <app-transactions (destroyed)="onCloseDialog()" [id]="viewUser.id"></app-transactions>
+          @if(viewUser() && viewUser().id){
+            <app-transactions [id]="viewUser().id"></app-transactions>
           }
 </p-dialog>
 
