--- a/src/app/components/shared/confirm-dialog/confirm-dialog.component.html
+++ b/src/app/components/shared/confirm-dialog/confirm-dialog.component.html
@@ -1,6 +1,6 @@
 
   <ng-content></ng-content>
   <div class="footer">
-    <p-button label="Delete" severity="danger" (click)="onConfirm(true)"/>
-    <p-button label="Cancel" severity="secondary" (click)="onConfirm(false)"/>
+    <p-button label="Yes" severity="danger" (click)="onConfirm(true)"/>
+    <p-button label="No" severity="secondary" (click)="onConfirm(false)"/>
   </div>
