--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<h3>Welcome {{ user()?.nameAndSurname }} your current balance is {{ currentAmount() }}</h3>
+<p>Welcome {{ user()?.nameAndSurname }} your current balance is {{ currentAmount() }}</p>
 
 <p-button label="Change amount" (click)="showDialog = true" />
 
